--- a/docassemble/lmrhh/data/questions/mud-fragen.yml
+++ b/docassemble/lmrhh/data/questions/mud-fragen.yml
@@ -47,10 +47,11 @@ section: Webinar-Optionen
 question: Webinar-Optionen
 subquestion: |
   Im zweiten Teil der Tagung werden verschiedene Webinare stattfinden. Es gibt
-  insgesamt 9 verschiedene, aus denen Sie an insgesamt **3** Stück teilnehmen
+  insgesamt 9 verschiedene, von denen Sie an insgesamt **3** Stück teilnehmen
   können.  
   
-  Die Webinare werden in folgenden Zeitfenstern angeboten. Alle Webinare werden insgesamt 2 Mal durchgeführt:
+  Die Webinare werden in folgenden 3 Zeitfenstern angeboten. Alle Webinare werden
+  insgesamt 2 Mal durchgeführt:
   <table class="schedule">
     <tr>
       <th>1.1</th><td><p>(1)</p><p>Musik-Apps für d. Generation Rock</p><p>Frauke Hohberger</p></td>
