--- a/docassemble/lmrhh/data/questions/mud-fragen.yml
+++ b/docassemble/lmrhh/data/questions/mud-fragen.yml
@@ -54,32 +54,32 @@ subquestion: |
 
   **Erstes Zeitfenster**: 15:50 Uhr bis 16:15 Uhr  
   **Zweites Zeitfenster**: 16:20 Uhr bis 16:45 Uhr  
-  **Drittes Zeitfenster**: 17:50 Uhr bis 17:15 Uhr
+  **Drittes Zeitfenster**: 16:50 Uhr bis 17:15 Uhr
 
   <table class="schedule">
     <tr>
-      <th>1.1</th><td><p>(1)</p><p>Musik-Apps für d. Generation Rock</p><p>Frauke Hohberger</p></td>
-      <th>1.2</th><td><p>(4)</p><p>Individualisierte Playlists</p><p>Julia Richarz</p></td>
-      <th>1.3</th><td><p>(3)</p><p>Musik bringt all(t)e in Bewegung</p><p>Mag. Monika Mayr</p></td>
-      <th>1.4</th><td><p>(5)</p><p>Lebenslange Musik zuhause erleben</p><p>Anette Zanker-Belz</p></td>
-      <th>1.5</th><td><p>(7)</p><p>Musiktherapeut. USB-Sinkreise</p><p>Michael Keßler</p></td>
-      <th>1.6</th><td><p>(8)</p><p>Das Keyboard i.d. musikther. Arbeit</p><p>Dr. Markus Sommerer</p></td>
+      <td><p><b>1.1</b>&nbsp;&nbsp;(1)</p><p>Musik-Apps für d. Generation Rock</p><p>Frauke Hohberger</p></td>
+      <td><p><b>1.2</b>&nbsp;&nbsp;(4)</p><p>Individualisierte Playlists</p><p>Julia Richarz</p></td>
+      <td><p><b>1.3</b>&nbsp;&nbsp;(3)</p><p>Musik bringt all(t)e in Bewegung</p><p>Mag. Monika Mayr</p></td>
+      <td><p><b>1.4</b>&nbsp;&nbsp;(5)</p><p>Lebenslange Musik zuhause erleben</p><p>Anette Zanker-Belz</p></td>
+      <td><p><b>1.5</b>&nbsp;&nbsp;(7)</p><p>Musiktherapeut. USB-Sinkreise</p><p>Michael Keßler</p></td>
+      <td><p><b>1.6</b>&nbsp;&nbsp;(8)</p><p>Das Keyboard i.d. musikther. Arbeit</p><p>Dr. Markus Sommerer</p></td>
     </tr>
     <tr>
-      <th>2.1</th><td><p>(1)</p><p>Musik-Apps für d. Generation Rock</p><p>Frauke Hohberger</p></td>
-      <th>2.2</th><td><p>(2)</p><p>Kommunikations-puppen</p><p>Martina Klimpel</p></td>
-      <th>2.3</th><td><p>(3)</p><p>Musik bringt all(t)e in Bewegung</p><p>Mag. Monika Mayr</p></td>
-      <th>2.4</th><td><p>(4)</p><p>Individualisierte Playlists</p><p>Julia Richarz</p></td>
-      <th>2.5</th><td><p>(6)</p><p>Musikintervent. f. häsl. pfleg. Angeh.</p><p>Dr. Lara Blauth</p></td>
-      <th>2.6</th><td><p>(9)</p><p>Musiktherapie in der geriatr. Pflege</p><p>Judith Stritzker</p></td>
+      <td><p><b>2.1</b>&nbsp;&nbsp;(1)</p><p>Musik-Apps für d. Generation Rock</p><p>Frauke Hohberger</p></td>
+      <td><p><b>2.2</b>&nbsp;&nbsp;(2)</p><p>Kommunikations-puppen</p><p>Martina Klimpel</p></td>
+      <td><p><b>2.3</b>&nbsp;&nbsp;(3)</p><p>Musik bringt all(t)e in Bewegung</p><p>Mag. Monika Mayr</p></td>
+      <td><p><b>2.4</b>&nbsp;&nbsp;(4)</p><p>Individualisierte Playlists</p><p>Julia Richarz</p></td>
+      <td><p><b>2.5</b>&nbsp;&nbsp;(6)</p><p>Musikintervent. f. häsl. pfleg. Angeh.</p><p>Dr. Lara Blauth</p></td>
+      <td><p><b>2.6</b>&nbsp;&nbsp;(9)</p><p>Musiktherapie in der geriatr. Pflege</p><p>Judith Stritzker</p></td>
     </tr>
     <tr>
-      <th>3.1</th><td><p>(9)</p><p>Musiktherapie in der geriatr. Pflege</p><p>Judith Stritzker</p></td>
-      <th>3.2</th><td><p>(2)</p><p>Kommunikations-puppen</p><p>Martina Klimpel</p></td>
-      <th>3.3</th><td><p>(7)</p><p>Musiktherapeut. USB-Sinkreise</p><p>Michael Keßler</p></td>
-      <th>3.4</th><td><p>(5)</p><p>Lebenslange Musik zuhause erleben</p><p>Anette Zanker-Belz</p></td>
-      <th>3.5</th><td><p>(6)</p><p>Musikintervent. f. häsl. pfleg. Angeh.</p><p>Dr. Lara Blauth</p></td>
-      <th>3.6</th><td><p>(8)</p><p>Das Keyboard i.d. musikther. Arbeit</p><p>Dr. Markus Sommerer</p></td>
+      <td><p><b>3.1</b>&nbsp;&nbsp;(9)</p><p>Musiktherapie in der geriatr. Pflege</p><p>Judith Stritzker</p></td>
+      <td><p><b>3.2</b>&nbsp;&nbsp;(2)</p><p>Kommunikations-puppen</p><p>Martina Klimpel</p></td>
+      <td><p><b>3.3</b>&nbsp;&nbsp;(7)</p><p>Musiktherapeut. USB-Sinkreise</p><p>Michael Keßler</p></td>
+      <td><p><b>3.4</b>&nbsp;&nbsp;(5)</p><p>Lebenslange Musik zuhause erleben</p><p>Anette Zanker-Belz</p></td>
+      <td><p><b>3.5</b>&nbsp;&nbsp;(6)</p><p>Musikintervent. f. häsl. pfleg. Angeh.</p><p>Dr. Lara Blauth</p></td>
+      <td><p><b>3.6</b>&nbsp;&nbsp;(8)</p><p>Das Keyboard i.d. musikther. Arbeit</p><p>Dr. Markus Sommerer</p></td>
     </tr>
   </table>
 
@@ -125,7 +125,7 @@ css: |
     table.schedule,
     table.schedule th,
     table.schedule td {
-      font-size: 8px;
+      font-size: 10px;
       border: 1px solid gray;
       border-collapse: collapse;
       padding: 5px 2px;
