--- a/docassemble/lmrhh/data/questions/mud.yml
+++ b/docassemble/lmrhh/data/questions/mud.yml
@@ -39,7 +39,10 @@ data:
 
   # Die hier angegebenen Personen erhalten automatisch eine Benachrichtigung,
   # wenn eine Anmeldung abgeschickt wird.
-  E-Mail Benachrichtigung: []
+  E-Mail Benachrichtigung:
+    - henne@lmr-hh.de
+    - burmeister@lmr-hh.de
+    - kober@lmr-hh.de
 
   # Dieses Mailgun Template wird zum Verschicken von E-Mails benutzt. Es sollte
   # die Variable {{{ content }}} enthalten.
