--- a/docassemble/lmrhh/data/questions/mud-fragen.yml
+++ b/docassemble/lmrhh/data/questions/mud-fragen.yml
@@ -112,7 +112,7 @@ fields:
           _**Dr. phil. Laura Blauth**, Musiktherapeutin Studienleiterin, HAW Würzburg, Schweinfurt_"
         : blauth
       - ? "**(7)** Musiktherapeutische Singangebote auf USB-Stick<br />
-          _**Markus Keßler**, Musiktherapeut M.A., Musik-Institut Rhein-Neckar, Heidelberg"_
+          _**Markus Keßler**, Musiktherapeut M.A., Musik-Institut Rhein-Neckar, Heidelberg_"
         : kessler
       - ? "**(8)** Das Keyboard – ein digitales Musikinstrument in der musiktherapeutischen Arbeit mit Menschen mit Demenz<br />
           _**Dr. rer. hum. biol. Markus Sommerer**, Musiktherapeut_"
