--- a/docassemble/lmrhh/data/questions/deutschland-singt-fragen.yml
+++ b/docassemble/lmrhh/data/questions/deutschland-singt-fragen.yml
@@ -2,6 +2,13 @@ field: Kontaktdaten
 section: Persönliche Daten
 question: Persönliche Daten
 subquestion: |
+  % if testmodus:
+    <div class="alert alert-warning" role="alert">
+    Die Anmeldung wird im Testmodus ausgefüllt. Die Ergebnisse werden nicht
+    automatisch übermittelt.
+    </div>
+  % endif
+
   Die Initiative "3. Oktober – Deutschland singt" lädt auch 2021 Menschen aller
   Generationen und Kulturen zum gemeinsamen Singen und Feiern ein.
   Gemeinsam möchten wir auch in Hamburg am 3. Oktober singen und musizieren und
@@ -31,25 +38,26 @@ fields:
       Du erhältst per E-Mail wichtige Informationen zur Arbeitsphase und
       Konzerten.
   - Über welche Telefonnummer sind Sie erreichbar?: person.phone_number
+    required: false
     validate: >
-      lambda x: phone_number_is_valid(x, "DE") or validation_error('Bitte geben Sie eine gültige Telefonnummer ein.')
-  - Wie lautet Ihre Adresse?: mitglied.address.address
+      lambda x: not x or phone_number_is_valid(x, "DE") or validation_error('Bitte geben Sie eine gültige Telefonnummer ein.')
+  - Wie lautet Ihre Adresse?: person.address.address
     hint: Bitte Straße und Hausnummer angeben
-  - Wie lautet Ihre Postleitzahl?: mitglied.address.zip
-  - In welchem Ort wohnen Sie?: mitglied.address.city
+  - Wie lautet Ihre Postleitzahl?: person.address.zip
+  - In welchem Ort wohnen Sie?: person.address.city
     default: Hamburg
   - ? Ich erkläre mich damit einverstanden, dass im Rahmen der Vorbereitung der
       Tagung durch den Landesmusikrat Hamburg meine Kontaktdaten
       gespeichert und zwecks Vorbereitung genutzt werden dürfen.
-      : bedingungen.daten
-      datatype: yesnowide
-      validate: >
-        lambda x: x or validation_error('Sie müssen alle Teilnahmebedingungen akzeptieren.')
+    : bedingungen.daten
+    datatype: yesnowide
+    validate: >
+      lambda x: x or validation_error('Sie müssen alle Teilnahmebedingungen akzeptieren.')
   - ? Ich habe die Datenschutzhinweise zustimmend zur Kenntnis genommen.
-      : bedingungen.datenschutz
-      datatype: yesnowide
-      validate: >
-        lambda x: x or validation_error('Sie müssen alle Teilnahmebedingungen akzeptieren.')
+    : bedingungen.datenschutz
+    datatype: yesnowide
+    validate: >
+      lambda x: x or validation_error('Sie müssen alle Teilnahmebedingungen akzeptieren.')
 ---
 field: Termine
 section: Probentermine
@@ -62,7 +70,8 @@ fields:
   - Ich bin an den folgenden Probenterminen anwesend: probentermine
     datatype: checkboxes
     none of the above: false
-    code: date_checklist(daten["Probentermine"])
+    code: |
+      date_checklist(daten["Probentermine"])
   - ? Weitere Anmerkungen
     : anmerkungen
     input type: area
@@ -92,9 +101,9 @@ review:
       |Name          | ${ person.name }         |
       |Telefonnummer | ${ person.phone_number } |
       |E-Mail        | ${ person.email }        |
-      |Adresse       | ${ adresse(mitglied) }   |
+      |Adresse       | ${ adresse(person) }   |
 
-      Sie haben den Datenschutzvereinbarungen zugestimmt.
+      Sie haben den Datenschutzvereinbarungen **zugestimmt**.
   - Angaben ändern: Termine
     button: |
       ## Termine
